# kinesisvideo-common

kinesis_manager/: CMakeLists.txt  FindKVSSDK.cmake
kinesis_manager/include/kinesis_manager/: default_callbacks.h  kinesis_stream_manager.h  kinesis_video_producer_interface.h  kinesis_video_stream_interface.h  stream_definition_provider.h
kinesis_manager/src/: kinesis_stream_manager.cpp  kinesis_video_stream_interface.cpp  stream_definition_provider.cpp
kinesis_manager/test/: kinesis_manager_test.cpp
